# HALO

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
examples/: audit_rule.rs  default_permission_audit.rs  permission_rules.rs  permissions.rs
examples/library_api/: permissions.rs
examples/toml_configs/: permissions_config.toml
src/: cli.rs  fix_script.rs  handle_args.rs  lib.rs  macros.rs  main.rs  prelude.rs  render_output.rs  types.rs
src/audit/: audit_permissions.rs  default_permissions.rs  mod.rs  ownership.rs  symlink.rs  toml_config.rs
src/audit/networking/: discovery.rs
src/audit/ownership/: ownership.rs
src/audit/permissions/: audit_permissions.rs  mod.rs
src/handlers/: bash.rs  check.rs  file.rs  mod.rs  net.rs  parse.rs
tests/: config_loading.rs  edge_cases.rs  rendering.rs  user_audit.rs
