[dev-dependencies]
tempfile = "3.8"
[package]
name = "alhalo"
version = "0.3.1"
edition = "2024"
description = "Linux system audit library and CLI for home users and sysadmins."
license = "MIT"
repository = "https://github.com/AlethaLabs/halo"
homepage = "https://github.com/AlethaLabs/halo"
keywords = ["audit", "linux", "permissions", "security", "cli"]

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
clap_complete = "4.5.57"
indexmap = { version = "2.11.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"

